--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            ''
+title:            'Colin Bull'
 tagline:          'Functional .NET, F#, C#'
 description:      ''
 url:              http://colinbull.github.io
