Updating blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,4 @@ author:
 paginate:         5
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/colinbul/colinbull.github.io
